# donadataset

./: .gitignore  README.md  cli.py  mkdocs.yml  pyproject.toml  setup.sh
.github/workflows/: docs.yml  publish.yml  validate.yml
dev/: 404.html  index.html  sitemap.xml
dev/about/: index.html
dev/classes/: index.html
dev/collection-protocol/: index.html
dev/dataset-description/: index.html
dev/es/: index.html
dev/features/: index.html
dev/publishing-b2share/: index.html
dev/publishing-gbif/: index.html
dev/publishing-guide/: index.html
dev/publishing-huggingface/: index.html
dev/publishing-zenodo/: index.html
dev/search/: search_index.json
dev/stylesheets/: extras.css
dev/user-guide/: index.html
docs/: about.es.md  about.md  classes.md  collection-protocol.md  dataset-description.es.md  dataset-description.md  features.es.md  features.md  index.es.md  index.md  publishing-b2share.es.md  publishing-b2share.md  publishing-gbif.es.md  publishing-gbif.md  publishing-guide.es.md  publishing-guide.md  publishing-huggingface.es.md  publishing-huggingface.md  publishing-zenodo.es.md  publishing-zenodo.md  user-guide.es.md  user-guide.md
docs/javascripts/: mermaid-zoom.js
docs/stylesheets/: extras.css
donadataset/: __init__.py  config.py  main.py
donadataset/commands/: b2share.py  b2share_config_commands.py  config_commands.py  gbif.py  gbif_config_commands.py  (+6 more)
metadata/: classes.yaml  dataset.yaml  source_classes.yaml
scripts/: download.py  upload.py  validate.py
templates/: B2SHARE.yaml.j2  Zenodo.yaml.j2
tests/: conftest.py
(+56 files in other folders)
