[project]
name = "donadataset"
version = "0.1.0"
description = "Camera-trap mammal dataset from Doñana National Park"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mike>=2.1.0",
]
scripts = [
  "huggingface-hub>=0.23.0",
  "pillow>=10.0.0",
  "pyyaml>=6.0",
  "tqdm>=4.66.0",
]